@@ -232,6 +232,7 @@ int PerlembParser::EventGlobalPlayer(QuestEventID evt, Client *client, std::stri
 
 int PerlembParser::EventItem(QuestEventID evt, Client *client, ItemInst *item, Mob *mob, std::string data, uint32 extra_data,
 							std::vector<EQEmu::Any> *extra_pointers) {
+	// needs pointer validation on 'item' argument
 	return EventCommon(evt, item->GetID(), nullptr, nullptr, item, client, extra_data, false, extra_pointers);
 }
 
@@ -333,6 +334,9 @@ bool PerlembParser::ItemHasQuestSub(ItemInst *itm, QuestEventID evt) {
 	package_name << "qst_item_" << itm->GetID();
 
 	if(!perl)
+		return false;
+
+	if (itm == nullptr)
 		return false;
 
 	if(evt >= _LargestEventID)
@@ -449,6 +453,9 @@ void PerlembParser::LoadGlobalPlayerScript(std::string filename) {
 }
 
 void PerlembParser::LoadItemScript(std::string filename, ItemInst *item) {
+	if (item == nullptr)
+		return;
+
 	std::stringstream package_name;
 	package_name << "qst_item_" << item->GetID();
 	
@@ -855,6 +862,7 @@ void PerlembParser::GetQuestPackageName(bool &isPlayerQuest, bool &isGlobalPlaye
 		}
 	}
 	else if(isItemQuest) {
+		// need a valid ItemInst pointer check here..unsure how to cancel this process -U
 		const Item_Struct* item = iteminst->GetItem();
 		package_name = "qst_item_";
 		package_name += itoa(item->ID);
@@ -1292,6 +1300,7 @@ void PerlembParser::ExportEventVariables(std::string &package_name, QuestEventID
 
 		case EVENT_SCALE_CALC:
 		case EVENT_ITEM_ENTER_ZONE: {
+			// need a valid ItemInst pointer check here..unsure how to cancel this process -U
 			ExportVar(package_name.c_str(), "itemid", objid);
 			ExportVar(package_name.c_str(), "itemname", iteminst->GetItem()->Name);
 			break;
@@ -1299,6 +1308,7 @@ void PerlembParser::ExportEventVariables(std::string &package_name, QuestEventID
 
 		case EVENT_ITEM_CLICK_CAST:
 		case EVENT_ITEM_CLICK: {
+			// need a valid ItemInst pointer check here..unsure how to cancel this process -U
 			ExportVar(package_name.c_str(), "itemid", objid);
 			ExportVar(package_name.c_str(), "itemname", iteminst->GetItem()->Name);
 			ExportVar(package_name.c_str(), "slotid", extradata);
