@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 12/23/2014 ==
+Uleat: Tidied up some ItemInst* declarations and added some nullptr checks.
+
 == 12/22/2014 ==
 Trevius: (RoF2) Fixed Tracking.
 Trevius: (RoF+) Added a work-around for the cursor buffer issue.
